# py-winbio

./: README.md  setup.cfg
.github/: renovate.json
.github/workflows/: osv-scanner.yml  python-publish.yml
src/py_winbio/: Enum.py  Helper.py  Types.py  WinBioAuth.py  test.py
