[metadata]
name = py-winbio
version = 0.0.1
author = IamPekka058
author_email = iampekka058@gmail.com
description = Python Wrapper for windows biometric authentication framework
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/IamPekka058/py-winbio
project_urls =
    Bug Tracker = https://github.com/IamPekka058/py--winbio/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Windows
    Development Status :: 1
    License :: OSI Approved :: GNU General Public License v3
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src